--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
         "tslint": "^5.8.0",
         "@types/node": "^8.10.25",
         "@types/mocha": "^2.2.42"
+    },
+    "dependencies": {
+        "@jscad/cli": "^1.9.0"
     }
 }
