added JSCAD to STL export command

--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
             {
                 "command": "jscadEditor.openPreview",
                 "title": "Preview JSCAD",
-                "category": "JSCAD Preview"
+                "category": "JSCAD"
+            },
+            {
+                "command": "jscadEditor.exportAsSTL",
+                "title": "Export JSCAD as STL",
+                "category": "JSCAD"
             }
         ],
         "languages": [
