--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,14 @@
         /* Strict Type-Checking Option */
         "strict": true,   /* enable all strict type-checking options */
         /* Additional Checks */
-        "noUnusedLocals": true /* Report errors on unused locals. */
+        "noUnusedLocals": true, /* Report errors on unused locals. */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
         // "noUnusedParameters": true,  /* Report errors on unused parameters. */
+        "typeRoots": [
+            "typings",
+            "node_modules/@types"
+        ]
     },
     "exclude": [
         "node_modules",
